# rusty-search

./: .gitignore  bun.lockb  package-lock.json  package.json  tailwind.config.ts
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: sitelist.txt
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/crawler/: mod.rs
src/lib/: stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/crawler/: +page.svelte
src/routes/metrics/: +page.svelte
src/routes/prepare/: +page.svelte
src/themes/: newyork.ts
