[package]
name = "rusty-search"
version = "0.1.0"
description = "A Search-engine App"
authors = ["Mert Sefa AKGUN <msa@msakg.com>"]
license = "MIT"
repository = "https://github.com/imsakg/rusty-search"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_search_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json"] }
spider = { version = "2", features = [
    "cache_mem",
    "cache_chrome_hybrid",
    "chrome_headless_new",
    "chrome_stealth",
    "chrome_intercept",
    "control",
    "jemalloc",
    "real_browser",
    "regex",
    "serde",
    "sitemap",
    "smart",
    "ua_generator",
] }

tauri = { version = "2", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"

tokio = { version = "1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
anyhow = "1.0.95"
spider_utils = { version = "2.22.8", features = [
    "indexmap",
    "indexset",
    "serde",
    "transformations",
] }
surrealdb = { version = "2.1.4", features = ["kv-surrealkv"] }
futures = "0.3.31"
